force-app/main/default/objects/HAM_Engagement_Activity_Value__c/HAM_Engagement_Activity_Value__c.object-meta.xml
<CustomObject>
    <description>Specific engagement activities</description>
    <label>Engagement Activity Value</label>
    <nameField>
        <displayFormat>EAV-{00000}</displayFormat>
        <label>Engagement Activity Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Activity Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>