force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>External_System_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External System Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>