force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Activity_Name__c</fullName>
    <label>Activity Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>