force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>HAM_Activity_Subtype__c</fullName>
    <label>Activity Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HAM_Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Professional Advising Appointment</fullName>
            </value>
            <value>
                <fullName>SFY Program</fullName>
            </value>
            <value>
                <fullName>Jump Start</fullName>
            </value>
            <value>
                <fullName>Know Thyself</fullName>
            </value>
            <value>
                <fullName>Industry Peer Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Industry Professional Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Advising Appointment</fullName>
                <isActive>false</isActive>
                <label>Advising Appointment</label>
            </value>
            <value>
                <fullName>Career Advice</fullName>
                <isActive>false</isActive>
                <label>Career Advice</label>
            </value>
            <value>
                <fullName>Employer Info Session</fullName>
                <isActive>false</isActive>
                <label>Employer Info Session</label>
            </value>
            <value>
                <fullName>Exploration/Skills Training/Networking</fullName>
                <isActive>false</isActive>
                <label>Exploration/Skills Training/Networking</label>
            </value>
            <value>
                <fullName>Interview Practice Program</fullName>
                <isActive>false</isActive>
                <label>Interview Practice Program</label>
            </value>
            <value>
                <fullName>Off-Site Program</fullName>
                <isActive>false</isActive>
                <label>Off-Site Program</label>
            </value>
            <value>
                <fullName>On-Campus Interviews</fullName>
                <isActive>false</isActive>
                <label>On-Campus Interviews</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Recruiting</fullName>
                <isActive>false</isActive>
                <label>Recruiting</label>
            </value>
            <value>
                <fullName>Shadowing</fullName>
                <isActive>false</isActive>
                <label>Shadowing</label>
            </value>
            <value>
                <fullName>Signature Program</fullName>
                <isActive>false</isActive>
                <label>Signature Program</label>
            </value>
            <value>
                <fullName>Staff Development</fullName>
                <isActive>false</isActive>
                <label>Staff Development</label>
            </value>
            <value>
                <fullName>Staff Visit</fullName>
                <isActive>false</isActive>
                <label>Staff Visit</label>
            </value>
            <value>
                <fullName>Student Recruitment</fullName>
                <isActive>false</isActive>
                <label>Student Recruitment</label>
            </value>
            <value>
                <fullName>Workshop</fullName>
                <isActive>false</isActive>
                <label>Workshop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>