force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action</fullName>
                <isActive>false</isActive>
                <label>Action</label>
            </value>
            <value>
                <fullName>Advising Appointment</fullName>
            </value>
            <value>
                <fullName>Career Advice</fullName>
            </value>
            <value>
                <fullName>Career Center</fullName>
                <isActive>false</isActive>
                <label>Career Center</label>
            </value>
            <value>
                <fullName>Career Program</fullName>
            </value>
            <value>
                <fullName>Employer Engagement</fullName>
                <isActive>false</isActive>
                <label>Employer Engagement</label>
            </value>
            <value>
                <fullName>Employer Info Session</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
            <value>
                <fullName>Exploration/Skills Training/Networking</fullName>
            </value>
            <value>
                <fullName>Interview Practice Program</fullName>
            </value>
            <value>
                <fullName>Jump Start</fullName>
                <isActive>false</isActive>
                <label>Jump Start</label>
            </value>
            <value>
                <fullName>Know Thyself</fullName>
                <isActive>false</isActive>
                <label>Know Thyself</label>
            </value>
            <value>
                <fullName>Off-Site Program</fullName>
            </value>
            <value>
                <fullName>On-Campus Interviews</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Recruiting-Exclusive</fullName>
            </value>
            <value>
                <fullName>SFY Program</fullName>
                <isActive>false</isActive>
                <label>SFY Program</label>
            </value>
            <value>
                <fullName>Shadowing</fullName>
            </value>
            <value>
                <fullName>Signature Program</fullName>
            </value>
            <value>
                <fullName>Staff Development</fullName>
            </value>
            <value>
                <fullName>Staff Visit</fullName>
            </value>
            <value>
                <fullName>Student Recruitment</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>