force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Cohort__c.field-meta.xml
<CustomField>
    <fullName>HAM_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>ucinn_ascendv2__Involvement_Value__c</referenceTo>
    <relationshipLabel>Engagement Activity Values</relationshipLabel>
    <relationshipName>Engagement_Activity_Values</relationshipName>
    <type>Lookup</type>
</CustomField>