force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Connect_101__c.field-meta.xml
<CustomField>
    <fullName>HAM_Connect_101__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect 101</label>
    <type>Checkbox</type>
</CustomField>