force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Parent_Engagement_Activity_Value__c.field-meta.xml
<CustomField>
    <fullName>HAM_Parent_Engagement_Activity_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Engagement Activity Value</label>
    <referenceTo>HAM_Engagement_Activity_Value__c</referenceTo>
    <relationshipLabel>Engagement Activity Values</relationshipLabel>
    <relationshipName>Engagement_Activity_Values</relationshipName>
    <type>Lookup</type>
</CustomField>