force-app/main/default/objects/HAM_Engagement_Activity_Value__c/fields/HAM_Volunteer_Flag__c.field-meta.xml
<CustomField>
    <fullName>HAM_Volunteer_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volunteer</label>
    <type>Checkbox</type>
</CustomField>